--- a/app/src/main/res/layout/activity_main_nav_header.xml
+++ b/app/src/main/res/layout/activity_main_nav_header.xml
@@ -12,6 +12,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@mipmap/launcher_icon" />
 
 </LinearLayout>
