--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -8,7 +8,13 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".Advertisement">
+    tools:context=".News">
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webview"
+        ></WebView>
 
     <!-- 1 | MainActivity RootView -->
     <LinearLayout
@@ -19,18 +25,25 @@
 
         <!-- Toolbar -->
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/activity_main_toolbar"
+            android:id="@+id/activity_news_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:theme="@style/ToolBarStyle"
-            app:title="Advertisement"/>
+            android:textAlignment="center"
+            app:title="News"
+            >
+        </androidx.appcompat.widget.Toolbar>
+
+
 
         <!-- FrameLayout for our fragments -->
-        <FrameLayout
+    <!--    <FrameLayout
             android:id="@+id/activity_main_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"/> -->
+
+
 
     </LinearLayout>
 
