--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".Advertisement">
+    tools:context=".Shop">
 
     <!-- 1 | MainActivity RootView -->
     <LinearLayout
@@ -24,7 +24,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:theme="@style/ToolBarStyle"
-            app:title="Advertisement"/>
+            app:title="Shopping"/>
 
         <!-- FrameLayout for our fragments -->
         <FrameLayout
