--- a/app/src/main/res/layout/activity_social.xml
+++ b/app/src/main/res/layout/activity_social.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:theme="@style/ToolBarStyle"/>
+            app:theme="@style/ToolBarStyle"
+            app:title="Social Network"/>
 
         <!-- FrameLayout for our fragments -->
         <FrameLayout
