--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -5,10 +5,26 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/activity_main_drawer_news"
-            android:icon="@drawable/ic_launcher_background"
-
+            android:id="@+id/activity_main_drawer_home"
+            android:icon="@drawable/ic_action_home_black_mdpi"
             android:title="Home" />
+        <item
+            android:id="@+id/activity_main_drawer_news"
+            android:icon="@drawable/ic_action_news_black_mdpi"
+            android:title="News" />
+        <item
+            android:id="@+id/activity_main_drawer_shops"
+            android:icon="@drawable/ic_action_shop_black_mdpi"
+            android:title="Shopping" />
+
+        <item
+            android:id="@+id/activity_main_drawer_social"
+            android:icon="@drawable/ic_action_social_black_mdpi"
+            android:title="Social Networks" />
+        <item
+            android:id="@+id/activity_main_drawer_ads"
+            android:icon="@drawable/ic_action_ad_black_mdpi"
+            android:title="Ads" />
     </group>
 
     <item android:title="Configuration">
@@ -16,12 +32,12 @@
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/activity_main_drawer_profile"
-                    android:icon="@drawable/ic_launcher_background"
+                    android:icon="@drawable/ic_action_profil_black_mdpi"
 
                     android:title="Profil" />
                 <item
                     android:id="@+id/activity_main_drawer_settings"
-                    android:icon="@drawable/ic_launcher_background"
+                    android:icon="@drawable/ic_action_settings_black_mdpi"
                     android:title="Paramètres" />
             </group>
         </menu>
