--- a/app/src/main/res/layout/activity_advertisement.xml
+++ b/app/src/main/res/layout/activity_advertisement.xml
@@ -26,11 +26,22 @@
             app:theme="@style/ToolBarStyle"
             app:title="Advertisement"/>
 
+
+        <VideoView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/videoView"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            ></VideoView>
+
         <!-- FrameLayout for our fragments -->
         <FrameLayout
             android:id="@+id/activity_main_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
     </LinearLayout>
 
