--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,60 +9,14 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     tools:context=".Home">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/News"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignTop="@+id/Shopping"
-            android:layout_marginEnd="28dp"
-            android:adjustViewBounds="true"
-            android:onClick="goNews"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <ImageButton
-            android:id="@+id/Groups"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/News"
-            android:layout_alignTop="@+id/Advertissmment"
-            android:adjustViewBounds="true"
-            android:onClick="goGroups"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <ImageButton
-            android:id="@+id/Shopping"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/toolbar3"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="101dp"
-            android:adjustViewBounds="true"
-            android:onClick="goShop"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <ImageButton
-            android:id="@+id/Advertissmment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/Shopping"
-            android:layout_below="@+id/Shopping"
-            android:layout_marginTop="63dp"
-            android:adjustViewBounds="true"
-            android:onClick="goAd"
-            app:srcCompat="@drawable/ic_launcher_background" />
-    </RelativeLayout>
     <!-- 1 | MainActivity RootView -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
+
 
         <!-- Toolbar -->
         <androidx.appcompat.widget.Toolbar
@@ -73,11 +27,55 @@
             app:theme="@style/ToolBarStyle"
             app:title="Home"/>
 
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_agenda"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            >
+
+        </CalendarView>
+
+        <LinearLayout
+            android:layout_marginTop="25dp"
+            android:layout_width="350dp"
+            android:background="@drawable/bg_agenda"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/displayEventDate"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:layout_marginRight="10dp"
+                ></TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/displayEvent"
+                android:textColor="@android:color/black"
+                android:text="Aucun Evenement"
+                ></TextView>
+
+        </LinearLayout>
+
+
+
         <!-- FrameLayout for our fragments -->
         <FrameLayout
             android:id="@+id/activity_main_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
+
+
 
     </LinearLayout>
 
