--- a/app/src/main/res/layout/activity_group_create.xml
+++ b/app/src/main/res/layout/activity_group_create.xml
@@ -10,6 +10,31 @@
     tools:context=".GroupCreate"
     tools:openDrawer="start">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/activity_news_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:textAlignment="center"
+            app:theme="@style/ToolBarStyle"
+            app:title="Création de Groupe"></androidx.appcompat.widget.Toolbar>
+
+
+        <!-- FrameLayout for our fragments -->
+        <!--    <FrameLayout
+            android:id="@+id/activity_main_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/> -->
+
+
+    </LinearLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,35 +45,28 @@
             android:id="@+id/editTextGroup"
             android:layout_width="242dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="170dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="388dp"
+            android:layout_marginEnd="84dp"
+            android:layout_marginStart="84dp"
             android:layout_marginTop="291dp"
             android:ems="10"
-            android:maxLength="10"
+            android:hint="Nom du groupe (moins de 10 caractéres)"
             android:inputType="textShortMessage"
-            android:hint="Nom du groupe (moins de 10 caractéres)" />
-
-        <FrameLayout
-            android:id="@+id/activity_main_frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/activity_main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:theme="@style/ToolBarStyle" />
-
-        </FrameLayout>
+            android:maxLength="10" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="45dp"
-            android:layout_marginTop="291dp"
+            android:layout_marginEnd="162dp"
+            android:layout_marginStart="162dp"
+            android:layout_marginTop="382dp"
             android:onClick="onClickCreateGroup"
             android:text="Créer" />
 
