--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -153,10 +153,9 @@
         android:layout_width="83dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="228dp"
-        android:layout_marginStart="276dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="229dp"
+        android:layout_marginEnd="58dp"
         android:text="Ville" />
 
     <TextView
@@ -164,9 +163,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="198dp"
-        android:layout_marginStart="279dp"
+        android:layout_marginEnd="84dp"
         android:text="TextView" />
 
 </RelativeLayout>
