--- a/app/src/main/res/layout/activity_profil_edit.xml
+++ b/app/src/main/res/layout/activity_profil_edit.xml
@@ -1,191 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
+    tools:context=".ProfilEdit">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/activity_news_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:textAlignment="center"
+            app:theme="@style/ToolBarStyle"
+            app:title="Edition de Profil"></androidx.appcompat.widget.Toolbar>
+
+
+        <!-- FrameLayout for our fragments -->
+        <!--    <FrameLayout
+            android:id="@+id/activity_main_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/> -->
+
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/activity_main_nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/activity_main_nav_header"
+        app:menu="@menu/activity_main_menu_drawer" />
+
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.saffin.androidsmartcity.ProfilEdit">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".auth.Profil">
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/editMail"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="44dp"
-            android:layout_toEndOf="@+id/imageView2"
-            android:onClick="onClickSignOutButton"
-            android:text="DECONNECTER"
-            android:visibility="invisible" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button2"
-            android:layout_alignBottom="@+id/button2"
-            android:layout_alignStart="@+id/imageView2"
-            android:onClick="onClickValidateChange"
-            android:text="@string/valider" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button3"
-            android:layout_alignBottom="@+id/button3"
-            android:layout_marginEnd="16dp"
-            android:layout_toStartOf="@+id/button3"
-            android:onClick="onClickDeleteButton"
-            android:text="SUPPRIMER"
-            android:visibility="invisible" />
-
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toolbar3"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="58dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_horizontal"
-            android:text="Informations"
-            android:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/button4"
-            android:layout_below="@+id/textView2"
-            android:layout_marginTop="19dp"
-            android:text="Nom" />
-
-        <EditText
-            android:id="@+id/editFirstName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView"
-            android:layout_below="@+id/textView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="217dp"
+            android:layout_marginEnd="300dp"
             android:layout_marginTop="11dp"
-            android:maxLength="10"
-            android:inputType="textShortMessage"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView7"
-            android:layout_alignBottom="@+id/textView7"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="-4dp"
-            android:text="Prénom" />
-
-        <EditText
-            android:id="@+id/editSecondName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView5"
-            android:layout_alignTop="@+id/editFirstName"
-            android:layout_marginStart="-19dp"
-            android:layout_marginTop="0dp"
-            android:maxLength="10"
-            android:inputType="textShortMessage"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/editFirstName"
-            android:layout_marginStart="13dp"
-            android:layout_toEndOf="@+id/textView2"
-            android:text="Age" />
-
-        <EditText
-            android:id="@+id/editAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/editSecondName"
-            android:layout_alignBottom="@+id/editSecondName"
-            android:layout_alignStart="@+id/button2"
-            android:layout_marginStart="23dp"
-            android:inputType="numberSigned"
+            android:inputType="textEmailAddress"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/editFirstName"
-            android:layout_below="@+id/editFirstName"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="269dp"
+            android:layout_marginEnd="307dp"
             android:layout_marginTop="31dp"
             android:text="Adresse Email" />
 
         <EditText
-            android:id="@+id/editMail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView9"
-            android:layout_below="@+id/textView9"
-            android:layout_marginTop="11dp"
-            android:inputType="textEmailAddress"
-            android:text="TextView" />
-
-        <Toolbar
-            android:id="@+id/toolbar3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:background="@android:color/holo_blue_dark">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/Profil"
-                android:textColor="@android:color/black"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-        </Toolbar>
-
-        <EditText
-            android:id="@+id/editCity"
-            android:layout_width="117dp"
+            android:id="@+id/editAge"
+            android:layout_width="58dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="150dp"
-            android:layout_marginEnd="84dp"
+            android:layout_marginBottom="220dp"
+            android:layout_marginEnd="89dp"
+            android:layout_marginStart="23dp"
+            android:inputType="numberSigned"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="266dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginStart="13dp"
+            android:text="Age" />
+
+        <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="68dp"
+        android:layout_marginEnd="157dp"
+        android:onClick="onClickValidateChange"
+        android:text="@string/valider" />
+
+        <EditText
+            android:id="@+id/editFirstName"
+            android:layout_width="91dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="331dp"
+            android:layout_marginEnd="309dp"
+            android:layout_marginTop="11dp"
+            android:inputType="textShortMessage"
+            android:maxLength="10"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="387dp"
+            android:layout_marginEnd="371dp"
+            android:layout_marginTop="19dp"
+            android:text="Nom" />
+
+        <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="491dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="58dp"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
+        <EditText
+            android:id="@+id/editCity"
+            android:layout_width="77dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="334dp"
+            android:layout_marginEnd="46dp"
             android:ems="10"
             android:inputType="textShortMessage"
             android:maxLength="10"
             android:text="Name" />
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="120dp"
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="203dp"
-            android:layout_marginStart="214dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="384dp"
+            android:layout_marginEnd="99dp"
             android:text="Ville" />
 
-    </RelativeLayout>
+        <EditText
+            android:id="@+id/editSecondName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="332dp"
+            android:layout_marginEnd="190dp"
+            android:layout_marginStart="-19dp"
+            android:layout_marginTop="0dp"
+            android:inputType="textShortMessage"
+            android:maxLength="10"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="385dp"
+            android:layout_marginEnd="221dp"
+            android:text="Prénom" />
+
+        <TextView
+        android:id="@+id/textView2"
+        android:layout_width="186dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="433dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginStart="113dp"
+        android:text="Informations"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
 </RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
