--- a/app/src/main/res/layout/activity_social.xml
+++ b/app/src/main/res/layout/activity_social.xml
@@ -7,9 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:visibility="visible"
-    tools:context=".Social"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    tools:context=".Social">
 
     <!-- 1 | MainActivity RootView -->
 
@@ -20,30 +19,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <!-- Toolbar -->
-
-
-        <!-- FrameLayout for our fragments -->
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/activity_main_toolbar"
+            android:id="@+id/activity_news_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:textAlignment="center"
             app:theme="@style/ToolBarStyle"
-            app:title="Social" />
+            app:title="Groupes"></androidx.appcompat.widget.Toolbar>
+
+
+        <!-- FrameLayout for our fragments -->
+        <!--    <FrameLayout
+            android:id="@+id/activity_main_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/> -->
 
 
     </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/activity_main_nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/activity_main_nav_header"
-        app:menu="@menu/activity_main_menu_drawer" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -55,8 +49,8 @@
             android:layout_height="48dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="74dp"
-            android:layout_marginTop="193dp"
+            android:layout_marginStart="283dp"
+            android:layout_marginTop="172dp"
             android:text="Créer" />
 
         <Button
@@ -65,8 +59,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="58dp"
-            android:layout_marginTop="190dp"
+            android:layout_marginEnd="152dp"
+            android:layout_marginTop="172dp"
             android:text="Mes groupes" />
 
         <Button
@@ -75,10 +69,19 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="150dp"
-            android:layout_marginTop="277dp"
+            android:layout_marginEnd="293dp"
+            android:layout_marginTop="173dp"
             android:text="Groupes" />
 
     </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/activity_main_nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/activity_main_nav_header"
+        app:menu="@menu/activity_main_menu_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
