--- a/app/src/main/res/layout/activity_social_group.xml
+++ b/app/src/main/res/layout/activity_social_group.xml
@@ -11,28 +11,66 @@
     tools:context=".SocialGroup"
     tools:openDrawer="start">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="354dp"
+                android:layout_height="492dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="108dp" />
+
+        </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <!-- Toolbar -->
-        <FrameLayout
-            android:id="@+id/activity_main_frame_layout"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/activity_news_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:textAlignment="center"
+            app:theme="@style/ToolBarStyle"
+            app:title="Liste des groupes"></androidx.appcompat.widget.Toolbar>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/activity_main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:theme="@style/ToolBarStyle" />
-        </FrameLayout>
 
         <!-- FrameLayout for our fragments -->
+        <!--    <FrameLayout
+            android:id="@+id/activity_main_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/> -->
+
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textNoGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="601dp"
+            android:layout_marginEnd="131dp"
+            android:layout_marginStart="131dp"
+            android:text="Il n'existe aucun groupe" />
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/activity_main_nav_view"
@@ -44,23 +82,5 @@
         app:menu="@menu/activity_main_menu_drawer">
 
     </com.google.android.material.navigation.NavigationView>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
-                android:layout_width="367dp"
-                android:layout_height="567dp"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="108dp" />
-        </LinearLayout>
-    </ScrollView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
