--- a/app/src/main/res/drawable/bg_agenda.xml
+++ b/app/src/main/res/drawable/bg_agenda.xml
@@ -5,5 +5,5 @@
         android:radius="20dp"/>
 
     <solid
-        android:color="@android:color/holo_orange_dark"/>
+        android:color="#66b3ff"/>
 </shape>
