--- a/app/src/main/res/layout/activity_advertisement.xml
+++ b/app/src/main/res/layout/activity_advertisement.xml
@@ -24,7 +24,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:theme="@style/ToolBarStyle"
-            app:title="Advertisement"/>
+            app:title="@string/ads"/>
 
 
         <VideoView
