--- a/app/src/main/res/layout/activity_group_create.xml
+++ b/app/src/main/res/layout/activity_group_create.xml
@@ -24,7 +24,7 @@
             android:layout_marginTop="291dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:text="@string/nom" />
 
         <FrameLayout
             android:id="@+id/activity_main_frame_layout"
@@ -49,7 +49,7 @@
             android:layout_marginEnd="45dp"
             android:layout_marginTop="291dp"
             android:onClick="onClickCreateGroup"
-            android:text="Créer" />
+            android:text="@string/creer" />
 
         <!-- FrameLayout for our fragments -->
 
