--- a/app/src/main/res/layout/activity_profil_edit.xml
+++ b/app/src/main/res/layout/activity_profil_edit.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="44dp"
             android:layout_toEndOf="@+id/imageView2"
             android:onClick="onClickSignOutButton"
-            android:text="DECONNECTER"
+            android:text="@string/deconnect"
             android:visibility="invisible" />
 
         <Button
@@ -41,7 +41,7 @@
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@+id/button3"
             android:onClick="onClickDeleteButton"
-            android:text="SUPPRIMER"
+            android:text="@string/suppr"
             android:visibility="invisible" />
 
 
@@ -61,7 +61,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_horizontal"
-            android:text="Informations"
+            android:text="@string/info"
             android:textColor="@android:color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -73,7 +73,7 @@
             android:layout_alignStart="@+id/button4"
             android:layout_below="@+id/textView2"
             android:layout_marginTop="19dp"
-            android:text="Nom" />
+            android:text="@string/nom" />
 
         <EditText
             android:id="@+id/editFirstName"
@@ -82,7 +82,7 @@
             android:layout_alignStart="@+id/textView"
             android:layout_below="@+id/textView"
             android:layout_marginTop="11dp"
-            android:text="TextView" />
+            android:text="@string/textview" />
 
         <TextView
             android:id="@+id/textView5"
@@ -91,7 +91,7 @@
             android:layout_alignBaseline="@+id/textView7"
             android:layout_alignBottom="@+id/textView7"
             android:layout_centerHorizontal="true"
-            android:text="Prénom" />
+            android:text="@string/prenom" />
 
         <EditText
             android:id="@+id/editSecondName"
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/textView5"
             android:layout_alignTop="@+id/editFirstName"
-            android:text="TextView" />
+            android:text="@string/textview" />
 
         <TextView
             android:id="@+id/textView7"
@@ -108,7 +108,7 @@
             android:layout_above="@+id/editFirstName"
             android:layout_marginStart="13dp"
             android:layout_toEndOf="@+id/textView2"
-            android:text="Age" />
+            android:text="@string/age" />
 
         <EditText
             android:id="@+id/editAge"
@@ -119,7 +119,7 @@
             android:layout_alignStart="@+id/button2"
             android:layout_marginStart="23dp"
             android:inputType="numberSigned"
-            android:text="TextView" />
+            android:text="@string/textview" />
 
         <TextView
             android:id="@+id/textView9"
@@ -128,7 +128,7 @@
             android:layout_alignStart="@+id/editFirstName"
             android:layout_below="@+id/editFirstName"
             android:layout_marginTop="31dp"
-            android:text="Adresse Email" />
+            android:text="@string/mail" />
 
         <EditText
             android:id="@+id/editMail"
@@ -138,7 +138,7 @@
             android:layout_below="@+id/textView9"
             android:layout_marginTop="11dp"
             android:inputType="textEmailAddress"
-            android:text="TextView" />
+            android:text="@string/textview" />
 
         <Toolbar
             android:id="@+id/toolbar3"
