--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -24,16 +24,27 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:theme="@style/ToolBarStyle"
-            app:title="Shopping"/>
+            app:title="@string/shopping"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/mapBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/map"
+                android:layout_margin="10dp"></Button>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/mapBtn"
-                android:text="Map"></Button>
+                android:id="@+id/favoriteBtn"
+                android:text="@string/fav"
+                android:layout_toRightOf="@id/mapBtn"
+                android:layout_margin="10dp"></Button>
         </RelativeLayout>
 
         <!-- FrameLayout for our fragments -->
