--- a/app/src/main/res/layout/activity_social.xml
+++ b/app/src/main/res/layout/activity_social.xml
@@ -50,7 +50,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="74dp"
             android:layout_marginTop="193dp"
-            android:text="Créer" />
+            android:text="@string/creer" />
 
         <Button
             android:id="@+id/button10"
@@ -60,7 +60,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="58dp"
             android:layout_marginTop="190dp"
-            android:text="Mes groupes" />
+            android:text="@string/mesGroupes" />
 
         <Button
             android:id="@+id/button7"
@@ -70,7 +70,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="150dp"
             android:layout_marginTop="277dp"
-            android:text="Groupes" />
+            android:text="@string/groupes" />
 
     </RelativeLayout>
 
