--- a/app/src/main/res/layout/list_cell.xml
+++ b/app/src/main/res/layout/list_cell.xml
@@ -13,6 +13,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        tools:text="GroupName" ></TextView>
+        tools:text="@string/nomGroupe" ></TextView>
 
 </LinearLayout>
