--- a/app/src/main/res/layout/activity_account_creation.xml
+++ b/app/src/main/res/layout/activity_account_creation.xml
@@ -16,11 +16,13 @@
             android:orientation="vertical" >
 
             <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="100dp"
                 android:layout_marginTop="30dp"
+                android:onClick="onClickAddFile"
                 android:src="@mipmap/ic_launcher_round" />
 
             <TextView
@@ -128,6 +130,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="50dp"
                 android:onClick="onCreateAccount"
+                android:background="@drawable/buttonshape"
+                android:shadowColor="#A8A8A8"
                 android:text="@string/valider"
                 android:textSize="20sp" />
         </LinearLayout>
