--- a/app/src/main/res/layout/activity_group_tchat.xml
+++ b/app/src/main/res/layout/activity_group_tchat.xml
@@ -16,24 +16,34 @@
         android:orientation="vertical">
 
         <!-- Toolbar -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/activity_news_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:textAlignment="center"
-            app:theme="@style/ToolBarStyle"
-            app:title="Tchat"></androidx.appcompat.widget.Toolbar>
-
-
-        <!-- FrameLayout for our fragments -->
-        <!--    <FrameLayout
+        <FrameLayout
             android:id="@+id/activity_main_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/> -->
+            android:layout_height="match_parent">
 
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/activity_main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:theme="@style/ToolBarStyle" />
+
+        </FrameLayout>
+
+        <!-- FrameLayout for our fragments -->
 
     </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/activity_main_nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/activity_main_nav_header"
+        app:menu="@menu/activity_main_menu_drawer">
+
+    </com.google.android.material.navigation.NavigationView>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -85,23 +95,9 @@
             android:layout_marginBottom="21dp"
             android:layout_marginEnd="63dp"
             android:onClick="onClickSendMessage"
+            android:background="@drawable/buttonshape"
+            android:shadowColor="#A8A8A8"
             android:text="Envoyer" />
-
-        <FrameLayout
-            android:id="@+id/activity_main_frame_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/activity_main_nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/activity_main_nav_header"
-            app:menu="@menu/activity_main_menu_drawer">
-
-        </com.google.android.material.navigation.NavigationView>
 
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
