--- a/app/src/main/res/layout/activity_home_temporary.xml
+++ b/app/src/main/res/layout/activity_home_temporary.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context=".home.Home">
+    tools:context=".home.Home_temporary">
 
     <!-- 1 | MainActivity RootView -->
     <LinearLayout
